--- a/porto/index.html
+++ b/porto/index.html
@@ -33,12 +33,15 @@
             <a href="https://www.linkedin.com/in/nelsonlaurensius/" target="_blank">
                 <img src="linkedin.png" alt="LinkedIn">
             </a>
+            <a href="https://www.youtube.com/channel/UC2-qr66uiz03aQIDzUbEvUw" target="_blank">
+                <img src="youtube.png" alt="Youtube">
+            </a>
         </section>
         
         <section id="random-quote">
             <h2>Random Quote</h2>
             <blockquote>
-                ""Technology is the force that transforms the world, but it's creativity that gives it meaning.""
+                "Technology is the force that transforms the world, but it's creativity that gives it meaning."
                 <footer>- Steve Jobs</footer>
             </blockquote>
         </section>
